--- a/invoice_management/templates/create_product.html
+++ b/invoice_management/templates/create_product.html
@@ -7,25 +7,14 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
-    <div class="create-produts-container">
-        <h1 class="create-products-h1">Create Product</h1>
-        <nav class="create-products-nav">
-            <ul>
-                <li><a href="{{ url_for('dashboard') }}">Dashboard</a></li>
-                <li><a href="{{ url_for('invoices') }}">Invoices</a></li>
-                <li><a href="{{ url_for('products') }}">Products</a></li>
-                <li><a href="{{ url_for('customers') }}">Customers</a></li>
-                <li><a href="{{ url_for('logout') }}">Logout</a></li>
-            </ul>
-        </nav>
-    </div>
-    <div class="cretae-products-containers">
-        <form method="post" class="create-produts-form">
-            <label for="product_name" class="create-produts-label">Product Name:</label>
-            <input class="create-produts-input" type="text" id="product_name" name="product_name" required><br>
-            <label for="product_price" class="create-produts-label">Product Price:</label>
-            <input class="create-produts-input" type="text" id="product_price" name="product_price" required><br>
-            <button class="create-products-button" type="submit">Create Product</button>
+    <div class="container">
+        <h1>Create Product</h1>
+        <form method="post">
+            <label for="product_name">Product Name:</label>
+            <input type="text" id="product_name" name="product_name" required><br>
+            <label for="product_price">Product Price:</label>
+            <input type="text" id="product_price" name="product_price" required><br>
+            <button type="submit">Create Product</button>
         </form>
     </div>
 </body>
